--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  popover: ^0.3.0+1
+  animated_bottom_navigation_bar: ^1.3.3
+  syncfusion_flutter_datepicker: ^26.2.14
+  intl: ^0.19.0
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
